# scenario-generation

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
app/: config.py  credentials.py  esdl_generator.py  helper.py  main.py  mapping_functions.py  rds_handler.py  scenariogeneration_functions.py
app/data/: 2021_hic_description.esdl  H2_export_table.xlsx  area_MV.xlsx  area_table.xlsx  biogasolefin_table.xlsx  boilerpathways_table.xlsx  com_price_factors.xlsx  com_prices.xlsx  comprices.xlsx  factor_table.xlsx  furnacepathways_table.xlsx  gridmaster_profiles_new.csv  hic_description_final.xlsx  naptha_table.xlsx  offshore_table.xlsx  onshore_PV_table.xlsx  onshore_wind_table.xlsx  plasticolefin1_table.xlsx  plasticolefin2_table.xlsx  scenario_factor0.xlsx  scenario_factor16a.xlsx  shorepower_table.xlsx  synfuel1_table.xlsx  synfuel2_table.xlsx  synfuel3_table.xlsx  synmeoh1_table.xlsx  synmeoh2_table.xlsx  synmeoh3_table.xlsx
app/sql/: update_scenario.sql
